--- a/FiresApi.csproj
+++ b/FiresApi.csproj
@@ -22,8 +22,10 @@
 
   <ItemGroup>
     <None Remove="Models\" />
+    <None Remove="DTOs\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="DTOs\" />
   </ItemGroup>
 </Project>
