--- a/FiresApi.csproj
+++ b/FiresApi.csproj
@@ -23,9 +23,11 @@
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="DTOs\" />
+    <None Remove="Context\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="DTOs\" />
+    <Folder Include="Context\" />
   </ItemGroup>
 </Project>
